# Weavegraph

./: .env.example  .gitignore  .release-plz.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  docker-compose.yml  wg-bastion_phase2_consistency_analysis.md  wg-bastion_phase2_security_review.md  wg-bastion_plan_v3.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benches/: event_bus_throughput.rs
docs/: 2026-02-21-feat-phase2-prompt-injection-security-plan.md  ARCHITECTURE.md  EXECUTION_REFACTOR_PLAN.md  GUIDE.md  INDEX.md  MIGRATION.md  OPERATIONS.md  QUICKSTART.md  REFACTOR_PROGRESS.md  STREAMING.md  event_bus_migration.md  event_bus_refactor.md  event_bus_refactor_plan.md  rust_security_crates_research.md  wg-bastion_plan_v2.md  wg-security_plan.md
docs/execution-sessions/work-2026-02-21-203200/: STATE.md
docs/schemas/: error_event.json  event.json  llm_event.json
examples/: README.md  STREAMING_QUICKSTART.md  advanced_patterns.rs  basic_nodes.rs  convenience_streaming.rs  demo1.rs  demo2.rs  errors_pretty.rs  graph_execution.rs  json_serialization.rs  production_streaming.rs  scheduler_fanout.rs  streaming_events.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: event_json.rs  replay_compare.rs  state_slots.rs
rag_utils/examples/: rust_book_pipeline.rs
scripts/: ci-local.sh  ci-quick.sh
src/: app.rs  control.rs  lib.rs  message.rs  node.rs  state.rs
src/channels/: errors.rs  errors_channel.rs  extras.rs  messages.rs  mod.rs
src/event_bus/: bus.rs  diagnostics.rs  emitter.rs  event.rs  hub.rs  mod.rs  sink.rs
src/graphs/: builder.rs  compilation.rs  mod.rs
src/llm/: mod.rs  rig_adapter.rs  traits.rs
src/reducers/: add_errors.rs  add_messages.rs  map_merge.rs  mod.rs  reducer_registry.rs
src/runtimes/: checkpointer.rs  checkpointer_postgres_helpers.rs  checkpointer_sqlite.rs  metrics_observer.rs  mod.rs  observer.rs  persistence.rs  replay.rs  runner.rs  runtime_config.rs  streaming.rs  types.rs
src/schedulers/: mod.rs  scheduler.rs
src/telemetry/: mod.rs
src/utils/: clock.rs  collections.rs  id_generator.rs  json_ext.rs  mod.rs  type_guards.rs
tests/: channels.rs  event_bus.rs  event_bus_stress.rs  graphs.rs  messages.rs  nodes.rs  reducers.rs  runtime_config_metadata.rs  runtimes_checkpointers.rs  runtimes_persistence_postgres.rs  runtimes_persistence_sqlite.rs  runtimes_replay.rs  runtimes_runner.rs  schedulers.rs  smoke.rs  state_channels.rs  telemetry.rs  utils.rs
tests/common/: nodes.rs  testing.rs
weavegraph/: Cargo.toml
weavegraph/benches/: event_bus_throughput.rs  graph_compile.rs
weavegraph/examples/: NodePartial_examples.md  README.md  STREAMING_QUICKSTART.md  advanced_patterns.rs  basic_nodes.rs  cap_demo.rs  convenience_streaming.rs  demo1.rs  demo2.rs  demo3.rs  demo4.rs  demo5_rag.rs  demo6_agent_mcp.rs  demo7_axum_sse.rs  errors_pretty.rs  event_backpressure.rs  streaming_events.rs
weavegraph/migrations/postgres/: 0001_init.sql
weavegraph/src/: app.rs  graph.rs  lib.rs  message.rs  node.rs  state.rs  types.rs
weavegraph/src/channels/: errors.rs  tests.rs
weavegraph/src/event_bus/: bus.rs  diagnostics.rs  emitter.rs  event.rs  hub.rs  mod.rs  sink.rs
weavegraph/src/graphs/: builder.rs  compilation.rs  edges.rs  iteration.rs  mod.rs  petgraph_compat.rs  tests.rs
weavegraph/src/reducers/: add_errors.rs  add_messages.rs  mod.rs  reducer_registry.rs
weavegraph/src/runtimes/: checkpointer.rs  checkpointer_postgres.rs  checkpointer_sqlite.rs  error_persistence_tests.rs  execution.rs  mod.rs  persistence.rs  runner.rs  runtime_config.rs  session.rs
weavegraph/src/schedulers/: scheduler.rs  tests.rs
weavegraph/src/telemetry/: mod.rs
weavegraph/src/utils/: clock.rs  collections.rs  deterministic_rng.rs  id_generator.rs  json_ext.rs  merge_inspector.rs  message_id_helpers.rs  mod.rs  testing.rs
weavegraph/tests/: app.rs  channels.rs  event_bus.rs  event_bus_diagnostics.rs  event_bus_stress.rs  graphs.rs  graphs_property.rs  messages.rs  nodes.rs  reducers.rs  runtimes_checkpointer.rs  runtimes_checkpointers.rs  runtimes_concurrent.rs  runtimes_persistence.rs  runtimes_persistence_postgres.rs  runtimes_persistence_sqlite.rs  runtimes_runner.rs  runtimes_types.rs  schedulers.rs  smoke.rs  state_channels.rs  streaming_sse.rs  telemetry.rs  types.rs  utils.rs
weavegraph/tests/common/: asserts.rs  fixtures.rs  mod.rs  nodes.rs  testing.rs
wg-bastion/: Cargo.toml  PERFORMANCE_ANALYSIS.md  PROGRESS.md  README.md
wg-bastion/docs/: architecture.md  control_matrix.csv  control_matrix.md  phase2_architecture_decisions.md  phase2_architecture_diagram.md  phase2_architecture_review.md  phase2_implementation_checklist.md  phase2_review_summary.md  threat_model.md
wg-bastion/docs/attack_playbooks/: llm01_prompt_injection.md
wg-bastion/docs/diagrams/: data_flow.mmd
wg-bastion/fuzz/: Cargo.toml  README.md
wg-bastion/fuzz/fuzz_targets/: fuzz_injection.rs  fuzz_normalization.rs  fuzz_template.rs
wg-bastion/src/: lib.rs
wg-bastion/src/config/: mod.rs
wg-bastion/src/input/: ensemble.rs  injection.rs  mod.rs  normalization.rs  patterns.rs  spotlight.rs  structural.rs
wg-bastion/src/pipeline/: compat.rs  content.rs  executor.rs  mod.rs  outcome.rs  stage.rs
wg-bastion/src/prompt/: honeytoken.rs  isolation.rs  mod.rs  refusal.rs  scanner.rs  template.rs
wg-bastion/tests/: injection_detection.rs
wg-ragsmith/: Cargo.toml  README.md
wg-ragsmith/doc/: senantic_chunking_plan.md
wg-ragsmith/examples/: query_chunks.rs  rust_book_pipeline.rs
wg-ragsmith/src/: lib.rs
wg-ragsmith/src/ingestion/: chunk.rs  mod.rs  resume.rs
wg-ragsmith/src/nodes/: chunking.rs  mod.rs
wg-ragsmith/src/semantic_chunking/: cache.rs  embeddings.rs  json.rs  service.rs
wg-ragsmith/src/stores/: mod.rs  sqlite.rs
wg-ragsmith/tests/: integration_mock_embeddings.rs
