[workspace]
members = ["weavegraph", "wg-ragsmith", "wg-bastion"]
exclude = ["wg-bastion/fuzz"]
resolver = "2"

[patch.crates-io]
wg-ragsmith = { path = "wg-ragsmith" }

[workspace.package]
edition = "2024"
license = "MIT"

repository = "https://github.com/Idleness76/weavegraph"
readme = "../README.md"
keywords = ["graph", "workflow", "concurrency", "agents", "tracing"]
categories = ["concurrency", "data-structures", "algorithms"]
rust-version = "1.89"
homepage = "https://github.com/Idleness76/weavegraph"
documentation = "https://docs.rs/weavegraph"
