[package]
name = "weavegraph-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
weavegraph = { path = "..", default-features = false }

[[bin]]
name = "event_json"
path = "fuzz_targets/event_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "replay_compare"
path = "fuzz_targets/replay_compare.rs"
test = false
doc = false
bench = false

[[bin]]
name = "state_slots"
path = "fuzz_targets/state_slots.rs"
test = false
doc = false
bench = false
