[package]
name = "wg-ragsmith"
version = "0.1.1"
edition = "2024"
description = "Semantic chunking and RAG utilities for document processing and retrieval-augmented generation."
license = "MIT"
repository = "https://github.com/Idleness76/weavegraph"
homepage = "https://github.com/Idleness76/weavegraph"
documentation = "https://docs.rs/wg-ragsmith"
keywords = ["rag", "semantic-chunking", "nlp", "chunking", "vector-search"]
categories = [
    "algorithms",
    "data-structures",
    "text-processing",
    "api-bindings",
]
rust-version = "1.89"
readme = "README.md"

[dependencies]
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
] }
tracing = "0.1"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "gzip",
    "brotli",
    "rustls-tls",
] }
url = "2"
rig-core = { version = "0.23", features = ["derive"] }
rig-sqlite = "0.1.26"
tokio-rusqlite = { version = "0.6", features = ["bundled"] }
sqlite-vec = "0.1"
regex = "1"
scraper = "0.24"
unicode-segmentation = "1.11"
uuid = { version = "1", features = ["v4", "serde"] }
segtok = { version = "0.1.5", optional = true }
tiktoken-rs = { version = "0.7", optional = true }
rust-bert = { version = "0.23", default-features = false, optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
httpmock = "0.7"
tempfile = "3"

[features]
default = ["semantic-chunking-tiktoken"]
semantic-chunking-tiktoken = ["tiktoken-rs"]
semantic-chunking-rust-bert = ["rust-bert"]
semantic-chunking-segtok = ["segtok"]

[lib]
path = "src/lib.rs"

[package.metadata.cargo-machete]
# These dependencies are optional (or future-facing) and intentionally retained:
# - rust-bert: gated behind the `semantic-chunking-rust-bert` feature
# - unicode-segmentation: reserved for upcoming segmentation strategies
# - httpmock: kept for future integration tests that exercise HTTP flows
ignored = ["rust-bert", "unicode-segmentation", "httpmock"]
